gcc/langhooks.c
@@ -472,14 +472,6 @@ lhd_expr_size (tree exp)
   else
     return size_in_bytes (TREE_TYPE (exp));
 }
-/* lang_hooks.decl_uninit: Find out if a variable is uninitialized based
-   on DECL_INITIAL.  */
-
-bool
-lhd_decl_uninit (tree t ATTRIBUTE_UNUSED)
-{
-  return false;
-}
 
 /* lang_hooks.gimplify_expr re-writes *EXPR_P into GIMPLE form.  */
 
